[package]
name = "supermart-image-v2"
version = "0.1.0"
authors = ["VeirryAu <veirryau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket-multipart-form-data = "0.9.5"
chrono = "0.4.19"
home = "0.5.3"
image = "0.24.1"
rand = "0.7.0"
rocket_contrib = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
